Fix bug in HttpURLFetcher that dropped the response headers

BUG=664989

Review-Url: https://codereview.chromium.org/2501553003
Cr-Commit-Position: refs/heads/master@{#432033}

Former-commit-id: 1cf8ef72e2667c0b7df484fd906f95e7275e00f4